@@ -6,6 +6,8 @@ Changes
 
         - Added "LButton" / "RButton" / "MButton" mouse buttons as key expression strings.
 
+        - Added keymap.updateKeymap() method. By this method you can apply the changes of WindowKeymap object contents immediately.
+
     **1.74**
 
         - Added keymap.clipboard_history.enableHook() method to enable/disable clipboard monitoring hook.
